fixed: bug with z-index in calendar plugin

--- a/src/plugins/calendar/calendar.scss
+++ b/src/plugins/calendar/calendar.scss
@@ -11,7 +11,7 @@
     border-radius: 4px;
     padding: 20px 19px 0px;
     position: absolute;
-    z-index: 100;
+    z-index: 150;
 
     &.open{
         display: block;
